--- a/index.html
+++ b/index.html
@@ -11,18 +11,56 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <title>Cerlancism</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+    main {
+      flex: 1 0 auto;
+    }
+    footer {
+      flex-shrink: 0;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>
-      Projects
-    </h1>
-
-    <div>
-      <a href="https://cerlancism.github.io/chatgpt-subtitle-translator/" target="_blank">ChatGPT Subtitle Translator Web Graphical User Interface</a>
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h1>
+            Projects
+          </h1>
+        </div>
+        <div class="col s12">
+          <a href="https://cerlancism.github.io/chatgpt-subtitle-translator/" target="_blank">
+            ChatGPT Subtitle Translator Web Graphical User Interface
+          </a>
+        </div>
+      </div>
     </div>
-  </div>
+  </main>
+
+  <footer class="page-footer grey lighten-3">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <p class="black-text">
+            &copy; <span id="year"></span> Chen Yu |
+            <a href="/legacy" target="_blank">Legacy Site</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 
 </html>
